Horizontal alignment; fixes #83

--- a/MMM-Powerwall.css
+++ b/MMM-Powerwall.css
@@ -150,6 +150,8 @@
     width: 150px;
     text-align: center;
     border-radius: 5px;
+    display: flex;
+    align-items: flex-start;
 }
 
 .MMM-Powerwall.col1 {
